# AutoBot-AI

./: .autobot-todo  .bandit  .claude-code-config.json  .env.distributed  .env.docker  .env.docker-desktop  .env.example  .env.linux-native  .env.localhost  .env.model-sharing  .env.native-vm  .env.network  .env.network-template  .env.windows-models  .env.wsl-192-ips  .env.wsl-docker-desktop  .env.wsl-host-network  .flake8  .gitignore  .infra_encryption_key  .mailmap  .pre-commit-config.yaml  .secrets.baseline  .todos  =2.0.0  =23.0.0  AI_STACK_INTEGRATION_COMPLETE.md  AUTOBOT_PHASE9_TESTING_INFRASTRUCTURE_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_VIOLATIONS.md  DEPLOYMENT_README.md  DESKTOP_ACCESS.md  DOCKER_ARCHITECTURE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FRONTEND_API_ENDPOINTS_FIXED.md  FRONTEND_FIXES_COMPLETION_SUMMARY.md  FRONTEND_OPTIMIZATION_REPORT.md  GUI_TEST_SUMMARY.md  (+157 more)
.accessibility-fix-backups/: AdvancedStepConfirmationModal.vue.20250812_191850.backup  App.vue.20250812_191850.backup  ChatInterface.vue.20250812_191850.backup  ElevationDialog.vue.20250812_191850.backup  FileBrowser.vue.20250812_191850.backup  HistoryView.vue.20250812_191850.backup  KnowledgeManager.vue.20250812_191850.backup  PhaseStatusIndicator.vue.20250812_191850.backup  SettingsPanel.vue.20250812_191850.backup  SystemMonitor.vue.20250812_191850.backup  TerminalSidebar.vue.20250812_191850.backup  TerminalWindow.vue.20250812_191850.backup  (+3 more)
.github/: CODEOWNERS  (+1 more)
mcp-tools/knowledge-base-mcp/: pyproject.toml
mcp-tools/knowledge-base-mcp/autobot_knowledge_mcp/: embedded.py  server.py
(+9880 files in other folders)
