[project]
name = "autobot-knowledge-mcp"
version = "1.0.0"
description = "MCP server for AutoBot knowledge base - provides search, retrieval, and management tools"
authors = [
    {name = "mrveiss"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "knowledge-base", "autobot", "llm", "vector-search"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
autobot-knowledge-mcp = "autobot_knowledge_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autobot_knowledge_mcp"]
